--- a/main.html
+++ b/main.html
@@ -7,9 +7,14 @@
     <p id = "user">Enter a Guessed Number </p>
     <input id= "guess"></input><br><br>
 	<!-- button -->
+	<button class="Guess">Guess</button>
     <!-- p tag -->
     <p id = "respond"></p>  <!-- This is the respone (Hot or Cold) -->
-    <script src="./script.js"></script><!-- Write the logic in script.js -->
-</script>
+   
+	
+	
+	
+	<script src="./script.js"></script><!-- Write the logic in script.js -->
+
   </body>
 </html>
